--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ serde_derive = "1.0.123"
 serde_urlencoded = "0.7.0"
 open = "1.4.0"
 url = "2.2.0"
+uuid = { version = "0.8.2", features = ["v4"] }
 indexmap = "1.6.1"
 strum = "0.20.0"
 strum_macros = "0.20.1"
