--- a/src/meson.build
+++ b/src/meson.build
@@ -71,9 +71,9 @@ sources = files(
   'ui/pages/mod.rs',
   'ui/pages/search_page.rs',
   'ui/about_dialog.rs',
+  'ui/create_station_dialog.rs',
   'ui/featured_carousel.rs',
   'ui/mod.rs',
-  'ui/new_station_dialog.rs',
   'ui/notification.rs',
   'ui/song_listbox.rs',
   'ui/song_row.rs',
