meson: Update to 0.59

--- a/meson.build
+++ b/meson.build
@@ -1,6 +1,6 @@
 project('shortwave', 'rust',
           version: '2.0.1',
-    meson_version: '>= 0.50.0',
+    meson_version: '>= 0.59.0',
           license: 'GPL-3.0-or-later',
 )
 
@@ -55,6 +55,6 @@ meson.add_install_script('build-aux/meson/postinstall.py')
 
 meson.add_dist_script(
   'build-aux/dist-vendor.sh',
-  meson.source_root(),
-  join_paths(meson.build_root(), 'meson-dist', meson.project_name() + '-' + meson.project_version())
+  meson.project_source_root(),
+  join_paths(meson.project_build_root(), 'meson-dist', meson.project_name() + '-' + meson.project_version())
 )
