meson: Drop custom cargo.sh

--- a/src/meson.build
+++ b/src/meson.build
@@ -22,93 +22,40 @@ run_command(
   check: true
 )
 
-
-# Source code itself
-sources = files(
-  'api/client.rs',
-  'api/error.rs',
-  'api/favicon_downloader.rs',
-  'api/mod.rs',
-  'api/object.rs',
-  'api/station.rs',
-  'api/station_metadata.rs',
-  'api/station_request.rs',
-  'api/station_url.rs',
-  'api/stats.rs',
-
-  'audio/backend/gstreamer_backend.rs',
-  'audio/backend/mod.rs',
-  'audio/backend/song_backend.rs',
-  'audio/controller/gcast_controller.rs',
-  'audio/controller/inhibit_controller.rs',
-  'audio/controller/sidebar_controller.rs',
-  'audio/controller/toolbar_controller.rs',
-  'audio/controller/mod.rs',
-  'audio/controller/mpris_controller.rs',
-  'audio/controller/mini_controller.rs',
-  'audio/gcast_discoverer.rs',
-  'audio/mod.rs',
-  'audio/player.rs',
-  'audio/song.rs',
-
-  'database/connection.rs',
-  'database/library.rs',
-  'database/mod.rs',
-  'database/queries.rs',
-  'database/schema.rs',
-
-  'settings/key.rs',
-  'settings/mod.rs',
-  'settings/settings_window.rs',
-  'settings/settings_manager.rs',
-
-  'model/mod.rs',
-  'model/station_model.rs',
-  'model/station_sorter.rs',
-
-  'ui/pages/discover_page.rs',
-  'ui/pages/library_page.rs',
-  'ui/pages/mod.rs',
-  'ui/pages/search_page.rs',
-  'ui/about_dialog.rs',
-  'ui/featured_carousel.rs',
-  'ui/mod.rs',
-  'ui/notification.rs',
-  'ui/song_listbox.rs',
-  'ui/song_row.rs',
-  'ui/station_favicon.rs',
-  'ui/station_dialog.rs',
-  'ui/station_flowbox.rs',
-  'ui/station_row.rs',
-  'ui/streaming_dialog.rs',
-  'ui/window.rs',
-
-  'app.rs',
-  'config.rs',
-  'main.rs',
-  'path.rs'
-)
-
 outputname = meson.project_name()
 if host_machine.system() == 'windows'
   outputname = '@0@.exe'.format(outputname)
 endif
 
-cargo_script = find_program(join_paths(meson.project_source_root(), 'build-aux/cargo.sh'))
+cargo = find_program('cargo')
+cargo_options = [ '--manifest-path', meson.project_source_root() / 'Cargo.toml' ]
+cargo_options += [ '--target-dir', meson.project_build_root() / 'src' ]
+
+if get_option('profile') == 'default'
+  cargo_options += [ '--release' ]
+  rust_target = 'release'
+  message('Building in release mode')
+else
+  rust_target = 'debug'
+  message('Building in debug mode')
+endif
+
+cargo_env = [ 'CARGO_HOME=' + meson.project_build_root() / 'cargo-home' ]
+
 cargo_release = custom_target(
   'cargo-build',
   build_by_default: true,
-  input: sources,
+  build_always_stale: true,
   output: outputname,
   console: true,
   install: true,
   install_dir: get_option('bindir'),
   command: [
-    cargo_script,
-    meson.project_build_root(),
-    meson.project_source_root(),
-    '@OUTPUT@',
-    localedir,
-    profile
+    'env',
+    cargo_env,
+    cargo, 'build',
+    cargo_options,
+    '&&',
+    'cp', 'src' / rust_target / meson.project_name(), '@OUTPUT@',
   ]
 )
