--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,90 +1,63 @@
 stages:
-  - lint
-  - test
-  - review
+  - check
+  - build
 
 variables:
-    BUNDLE: "shortwave-dev.flatpak"
-    GIT_SUBMODULE_STRATEGY: recursive
+  MANIFEST_PATH: "build-aux/de.haeckerfelix.Shortwave.Devel.json"
+  FLATPAK_MODULE: "shortwave"
+  APP_ID: "de.haeckerfelix.Shortwave.Devel"
+  RUNTIME_REPO: "https://nightly.gnome.org/gnome-nightly.flatpakrepo"
+  CI_IMAGE_X86_64: "registry.gitlab.gnome.org/gnome/gnome-runtime-images/rust_bundle:master"
 
-flatpak:
-    image: "registry.gitlab.gnome.org/gnome/gnome-runtime-images/rust_bundle:master"
-    stage: "test"
-    variables:
-        MANIFEST_PATH: "build-aux/de.haeckerfelix.Shortwave.Devel.json"
-        VENDOR_PATH: "shortwave.tar.xz"
-        FLATPAK_MODULE: "shortwave"
-        CONFIGURE_ARGS: "-Dprofile=development"
-        RUNTIME_REPO: "https://sdk.gnome.org/gnome-nightly.flatpakrepo"
-        APP_ID: "de.haeckerfelix.Shortwave.Devel"
-    tags:
-        - flatpak
-
-    script:
-        - flatpak-builder --user --disable-rofiles-fuse --stop-at=${FLATPAK_MODULE} app ${MANIFEST_PATH}
-        # Build the flatpak repo
-        - flatpak-builder --disable-rofiles-fuse --run app ${MANIFEST_PATH} meson --prefix=/app ${CONFIGURE_ARGS} _build
-        - flatpak-builder --disable-rofiles-fuse --run app ${MANIFEST_PATH} ninja -C _build install
-
-        # Create a flatpak bundle
-        - flatpak-builder --user --disable-rofiles-fuse --finish-only app ${MANIFEST_PATH}
-        - flatpak build-export repo app
-        - flatpak build-bundle repo ${BUNDLE} ${APP_ID}
-
-    artifacts:
-        paths:
-            - $BUNDLE
-            - $VENDOR_PATH
-        expire_in: 5 days
-
-    cache:
-        key: "flatpak"
-        paths:
-          - .flatpak-builder/downloads/
-          - .flatpak-builder/git/
-          - target/
-          - target_test/
-
-review:
-    stage: review
-    dependencies:
-        - flatpak
-    script:
-        - echo "Generating flatpak deployment"
-    artifacts:
-        paths:
-            - $BUNDLE
-        expire_in: 30 days
-    environment:
-        name: review/$CI_COMMIT_REF_NAME
-        url: https://gitlab.gnome.org/$CI_PROJECT_PATH/-/jobs/$CI_JOB_ID/artifacts/raw/${BUNDLE}
-        on_stop: stop_review
-    except:
-        - master@World/shortwave
-        - tags
-
-stop_review:
-    stage: review
-    script:
-        - echo "Stopping flatpak deployment"
-    when: manual
-    environment:
-        name: review/$CI_COMMIT_REF_NAME
-        action: stop
-    except:
-        - master@World/shortwave
-        - tags
-
-# Configure and run rustfmt
-# Exits and builds fails if on bad format
-rustfmt:
-  image: "rust:slim"
-  stage: "lint"
+.build_template:
   script:
-    # Create blank versions of our configured files
-    # so rustfmt does not yell about non-existent files or completely empty files
-    - echo -e "" >> src/config.rs
-    - rustup component add rustfmt
-    - rustc -Vv && cargo -Vv
-    - cargo fmt --version
-    - cargo fmt --all -- --color=always --check
+    - rewrite-flatpak-manifest ${MANIFEST_PATH} ${FLATPAK_MODULE} ${CONFIG_OPTS}
+    - >
+      xvfb-run -a -s "-screen 0 1024x768x24"
+      flatpak-builder --keep-build-dirs --user --disable-rofiles-fuse flatpak_app --repo=repo ${BRANCH:+--default-branch=$BRANCH} ${MANIFEST_PATH}
+    - flatpak build-bundle repo ${BUNDLE} --runtime-repo=${RUNTIME_REPO} ${APP_ID} ${BRANCH}
+    - mkdir logs
+    - mv .flatpak-builder/build/${FLATPAK_MODULE}/_flatpak_build/meson-logs/meson-log.txt logs/
+    - mv .flatpak-builder/build/${FLATPAK_MODULE}/_flatpak_build/meson-logs/testlog.txt logs/
+    - tar cf repo.tar repo/
+  artifacts:
+    name: 'Flatpak artifacts'
+    expose_as: 'Get Flatpak bundle here'
+    when: 'always'
+    paths:
+      - "${BUNDLE}"
+      - 'repo.tar'
+      - 'logs'
+    expire_in: 14 days
+
+.build_x86_64:
+  extends: .build_template
+  image: '${CI_IMAGE_X86_64}'
+  tags:
+    - flatpak
+
+# Configure and run code checks
+# Exits and fails if an error is encountered
+checks:
+  image: "rustlang/rust:nightly-slim"
+  stage: check
+  script:
+    - build-aux/checks.sh --verbose --force-install
+
+# Lint the code
+cargo-clippy:
+  image: '${CI_IMAGE_X86_64}'
+  stage: check
+  tags:
+    - flatpak
+  script:
+    - flatpak-builder --keep-build-dirs --user --disable-rofiles-fuse --stop-at=${FLATPAK_MODULE} flatpak_app --repo=repo ${BRANCH:+--default-branch=$BRANCH} ${MANIFEST_PATH}
+    - echo "cargo clippy -- -D warnings" | flatpak-builder --disable-rofiles-fuse --build-shell=${FLATPAK_MODULE} flatpak_app ${MANIFEST_PATH}
+
+# Build the development version of the flatpak
+build-x86_64:
+  extends: .build_x86_64
+  stage: build
+  variables:
+    BUNDLE: "${FLATPAK_MODULE}_x86_64.flatpak"
+    CONFIG_OPTS: "-Dprofile=development"
