--- a/data/de.haeckerfelix.Shortwave.metainfo.xml.in.in
+++ b/data/de.haeckerfelix.Shortwave.metainfo.xml.in.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2020 Felix Häcker -->
+<!-- Copyright 2020-2022 Felix Häcker -->
 <component type="desktop-application">
   <id>@appid@</id>
   <name>Shortwave</name>
@@ -28,13 +28,13 @@
   </description>
 
   <screenshots>
-    <screenshot type="default" height="1002" width="702">
+    <screenshot type="default" height="1072" width="772">
       <image>https://gitlab.gnome.org/World/Shortwave/raw/master/data/screenshots/1.png</image>
     </screenshot>
-    <screenshot height="1002" width="702">
+    <screenshot height="1072" width="772">
       <image>https://gitlab.gnome.org/World/Shortwave/raw/master/data/screenshots/2.png</image>
     </screenshot>
-    <screenshot height="1002" width="702">
+    <screenshot height="1072" width="772">
       <image>https://gitlab.gnome.org/World/Shortwave/raw/master/data/screenshots/3.png</image>
     </screenshot>
   </screenshots>
