ci: Include perl package for cargo-deny

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,6 +41,7 @@ checks:
   image: "rustlang/rust:nightly-slim"
   stage: check
   script:
+    - apt-get install -y perl
     - build-aux/checks.sh --verbose --force-install
 
 # Lint the code
