--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,7 +41,7 @@ checks:
   image: "rustlang/rust:nightly-slim"
   stage: check
   script:
-    - apt-get install -y perl-base
+    - apt-get install -y perl-base libfindbin-libs-perl
     - build-aux/checks.sh --verbose --force-install
 
 # Lint the code
