--- a/data/de.haeckerfelix.Shortwave.metainfo.xml.in.in
+++ b/data/de.haeckerfelix.Shortwave.metainfo.xml.in.in
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Copyright 2020-2022 Felix Häcker -->
 <component type="desktop-application">
-  <id>@appid@</id>
-  <name>Shortwave</name>
+  <id>@APP_ID@</id>
+  <name>@NAME@</name>
   <summary>Listen to internet radio</summary>
-  <translation type="gettext">shortwave</translation>
+  <translation type="gettext">@PKGNAME@</translation>
   <developer_name>Felix Häcker</developer_name>
   <update_contact>haeckerfelix@gnome.org</update_contact>
   <metadata_license>CC0-1.0</metadata_license>
   <project_license>GPL-3.0-or-later</project_license>
-  <launchable type="desktop-id">@appid@.desktop</launchable>
+  <launchable type="desktop-id">@APP_ID@.desktop</launchable>
   <content_rating type="oars-1.1"/>
 
   <description>
