--- a/data/icons/meson.build
+++ b/data/icons/meson.build
@@ -8,7 +8,7 @@ install_data(
 symbolic_dir = join_paths('hicolor', 'symbolic', 'apps')
 
 install_data(
-  join_paths(symbolic_dir, 'de.haeckerfelix.Shortwave-symbolic.svg'),
+  join_paths(symbolic_dir, '@0@-symbolic.svg'.format(base_id)),
   install_dir: join_paths(datadir, 'icons', symbolic_dir),
   rename: '@0@-symbolic.svg'.format(app_id)
 )
