--- a/data/de.haeckerfelix.Shortwave.service.in
+++ b/data/de.haeckerfelix.Shortwave.service.in
@@ -1,3 +1,3 @@
 [D-BUS Service]
-Name=@appid@
-Exec=@bindir@/shortwave --gapplication-service
+Name=@APP_ID@
+Exec=@BINDIR@/@PKGNAME@ --gapplication-service
