--- a/src/config.rs.in
+++ b/src/config.rs.in
@@ -5,4 +5,4 @@ pub static VERSION: &str = @VERSION@;
 pub static PROFILE: &str = @PROFILE@;
 pub static VCS_TAG: &str = @VCS_TAG@;
 pub static LOCALEDIR: &str = @LOCALEDIR@;
-pub static PKGDATADIR: &str = @PKGDATADIR@;
+pub static DATADIR: &str = @DATADIR@;
