--- a/src/meson.build
+++ b/src/meson.build
@@ -7,7 +7,7 @@ conf.set_quoted('VERSION', meson.project_version())
 conf.set_quoted('PROFILE', profile)
 conf.set_quoted('VCS_TAG', vcs_tag)
 conf.set_quoted('LOCALEDIR', localedir)
-conf.set_quoted('PKGDATADIR', pkgdatadir)
+conf.set_quoted('DATADIR', datadir)
 
 configure_file(
     input: 'config.rs.in',
@@ -22,12 +22,9 @@ run_command(
   check: true
 )
 
-outputname = meson.project_name()
-if host_machine.system() == 'windows'
-  outputname = '@0@.exe'.format(outputname)
-endif
-
+# Setup cargo
 cargo = find_program('cargo')
+cargo_env = [ 'CARGO_HOME=' + meson.project_build_root() / 'cargo-home' ]
 cargo_options = [ '--manifest-path', meson.project_source_root() / 'Cargo.toml' ]
 cargo_options += [ '--target-dir', meson.project_build_root() / 'target' ]
 
@@ -40,16 +37,14 @@ else
   message('Building in debug mode')
 endif
 
-cargo_env = [ 'CARGO_HOME=' + meson.project_build_root() / 'cargo-home' ]
-
 cargo_release = custom_target(
   'cargo-build',
   build_by_default: true,
   build_always_stale: true,
-  output: outputname,
+  output: meson.project_name(),
   console: true,
   install: true,
-  install_dir: get_option('bindir'),
+  install_dir: bindir,
   command: [
     'env',
     cargo_env,
