--- a/data/de.haeckerfelix.Shortwave.metainfo.xml.in.in
+++ b/data/de.haeckerfelix.Shortwave.metainfo.xml.in.in
@@ -41,7 +41,7 @@
 
   <url type="homepage">https://gitlab.gnome.org/World/Shortwave</url>
   <url type="bugtracker">https://gitlab.gnome.org/World/Shortwave/issues</url>
-  <url type="donation">https://de.liberapay.com/haecker-felix</url>
+  <url type="donation">https://liberapay.com/haecker-felix</url>
 
   <kudos>
     <kudo>HiDpiIcon</kudo>
