--- a/src/meson.build
+++ b/src/meson.build
@@ -3,6 +3,7 @@ conf = configuration_data()
 conf.set_quoted('NAME', name)
 conf.set_quoted('PKGNAME', meson.project_name())
 conf.set_quoted('APP_ID', app_id)
+conf.set_quoted('PATH_ID', path_id)
 conf.set_quoted('VERSION', meson.project_version())
 conf.set_quoted('PROFILE', profile)
 conf.set_quoted('VCS_TAG', vcs_tag)
