--- a/data/de.haeckerfelix.Shortwave.metainfo.xml.in.in
+++ b/data/de.haeckerfelix.Shortwave.metainfo.xml.in.in
@@ -42,6 +42,7 @@
   <url type="homepage">https://gitlab.gnome.org/World/Shortwave</url>
   <url type="bugtracker">https://gitlab.gnome.org/World/Shortwave/issues</url>
   <url type="donation">https://liberapay.com/haecker-felix</url>
+  <url type="translate">https://l10n.gnome.org/module/Shortwave/</url>
 
   <kudos>
     <kudo>HiDpiIcon</kudo>
@@ -49,15 +50,20 @@
     <kudo>Notifications</kudo>
   </kudos>
 
+  <custom>
+    <value key="Purism::form_factor">workstation</value>
+    <value key="Purism::form_factor">mobile</value>
+  </custom>
+
+  <requires>
+    <display_length compare="ge">360</display_length>
+  </requires>
+
   <recommends>
     <control>keyboard</control>
     <control>pointing</control>
     <control>touch</control>
   </recommends>
-
-  <requires>
-    <display_length compare="ge">360</display_length>
-  </requires>
 
   <releases>
     <release version="3.0.0" date="2022-04-23">
@@ -186,8 +192,4 @@
       </description>
     </release>
   </releases>
-  <custom>
-    <value key="Purism::form_factor">workstation</value>
-    <value key="Purism::form_factor">mobile</value>
-  </custom>
 </component>
