song_backend: Don't assume that xdg-music exists. Closes #676

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -16,6 +16,7 @@ data/gtk/streaming_dialog.ui
 data/gtk/toolbar_controller.ui
 data/gtk/window.ui
 
+src/audio/backend/song_backend.rs
 src/audio/player.rs
 src/ui/about_window.rs
 src/ui/pages/discover_page.rs
