--- a/data/de.haeckerfelix.Shortwave.metainfo.xml.in.in
+++ b/data/de.haeckerfelix.Shortwave.metainfo.xml.in.in
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Copyright 2020-2022 Felix Häcker -->
+<!-- Copyright 2020-2023 Felix Häcker -->
 <component type="desktop-application">
   <id>@APP_ID@</id>
   <name>@NAME@</name>
@@ -66,6 +66,18 @@
   </recommends>
 
   <releases>
+    <release version="3.2.0" date="2023-02-07">
+      <description>
+        <p>
+          This version includes minor improvements and bug fixes.
+        </p>
+        <ul>
+          <li>Small user interface improvements</li>
+          <li>App can now be closed with CTRL+W</li>
+          <li>Updated translations</li>
+        </ul>
+      </description>
+    </release>
     <release version="3.1.0" date="2022-10-15">
       <description>
         <p>
