--- a/data/de.haeckerfelix.Shortwave.gresource.xml.in
+++ b/data/de.haeckerfelix.Shortwave.gresource.xml.in
@@ -7,6 +7,7 @@
     <file compressed="true" preprocess="xml-stripblanks">gtk/featured_carousel_page.ui</file>
     <file compressed="true" preprocess="xml-stripblanks" alias="gtk/help-overlay.ui">gtk/help_overlay.ui</file>
     <file compressed="true" preprocess="xml-stripblanks">gtk/library_page.ui</file>
+    <file compressed="true" preprocess="xml-stripblanks">gtk/map_page.ui</file>
     <file compressed="true" preprocess="xml-stripblanks">gtk/mini_controller.ui</file>
     <file compressed="true" preprocess="xml-stripblanks">gtk/player.ui</file>
     <file compressed="true" preprocess="xml-stripblanks">gtk/search_page.ui</file>
